# axby-core

./: .bazelrc_linux  .bazelrc_windows  .clang-format  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  config.bzl  pip_monkeypatch.py  pip_patching_requirements.in  pip_patching_requirements.txt  pip_patching_requirements_windows.txt  requirements.in  requirements.txt  system_deps.bzl  update_requirements.py
app/: BUILD  create_log_table.sql  files.cpp  files.h  flag.h  gui.cpp  gui.h  gui_example.cpp  gui_gl_example.cpp  main.cpp  main.h  main_example.cpp  process_id.cpp  process_id.h  pubsub.cpp  pubsub.h  pubsub_example.cpp  pubsub_message.h  pubsub_recorder.cpp  pubsub_recorder.h  pubsub_recording.cpp  stop_all.cpp  stop_all.h  timing.cpp  timing.h
axgl/: BUILD  buffer.cpp  buffer.h  buffer_test.cpp  cmap.cpp  cmap.h  frame_buffer.cpp  frame_buffer.h  frame_buffer_test.cpp  gl_test_fixture.cpp  gl_test_fixture.h  info.cpp  info.h  info_test.cpp  program.cpp  program.h  shapes.cpp  shapes.h  texture.cpp  texture.h  texture_test.cpp  vertex_array.cpp  vertex_array.h
colors/: BUILD  colors.h  colors_test.cpp
concurrency/: BUILD  job_state.cpp  job_state.h  ring_buffer.h  ring_buffer_stress_test.cpp  ring_buffer_test.cpp  single_item.h  single_item_test.cpp
debug/: BUILD  check.h  error_message_or.h  log.h  to_sstring.h
fast_resizable_vector/: BUILD  fast_resizable_vector.h
log_viewer/: BUILD  log_viewer.cpp  seekbar.cpp  seekbar.h
math/: BUILD  camera.cpp  camera.h  misc.h  running_stat.h  spatial.cpp  spatial.h  spatial_impl.hpp
metaprogramming/: BUILD  metaprogramming.h
network_config/: BUILD  config.cpp  config.h
pimpl/: BUILD  pimpl.h
random/: BUILD  linear_congruential_generator.cpp  linear_congruential_generator.h
realsense_streaming/: BUILD  client.cpp  client.h  client_sanity.cpp  messages.cpp  messages.h  pointcloud_job.cpp  pointcloud_job.h  realsense_state.h  server.cpp  util.cpp  util.h  viewer.cpp
rgbd/: BUILD  rgbd.cpp  rgbd.h  rgbd_test.cpp
seq/: BUILD  any_seq.h  float_or_double_seq.h  seq.h  seq_test.cpp
serialization/: BUILD  macros.h  make_serializable.hpp  person_example.cpp  person_example.h  primitives.cpp  primitives.h  serialization.h  serialization_test.cpp  small_string.h  small_string_test.cpp  using_person_example.cpp
shaders/: BUILD  cmapped_texture.cpp  cmapped_texture.frag  cmapped_texture.h  colored_vertex_ids.cpp  colored_vertex_ids.frag  colored_vertex_ids.h  colored_vertex_ids.vert  colored_vertices.cpp  colored_vertices.frag  colored_vertices.h  colored_vertices.vert  debug_vertex_ids.cpp  debug_vertex_ids.frag  debug_vertex_ids.h  debug_vertex_ids.vert  lines.cpp  lines.frag  lines.h  lines.vert  material_mesh.cpp  material_mesh.frag  material_mesh.h  material_mesh.vert  sanity.cpp  scratch.cpp  texture.cpp  texture.frag  texture.h  texture.vert  vertex_ids.cpp  vertex_ids.frag  vertex_ids.h  vertex_ids.vert  vertex_world_xyzs.cpp  vertex_world_xyzs.frag  vertex_world_xyzs.h  vertex_world_xyzs.vert
time_sync/: BUILD  client_demo.cpp  notes.txt  server.cpp  server_linux.c  time_sync.cpp  time_sync.h
tools/: BUILD  embed_data.bzl  embed_files.py
viewer/: BUILD  imgui.ini  mesh.h  sphere.ply  viewer.cpp  viewer.h  viewer_demo.cpp  viewer_mesh_demo.cpp
wrappers/: BUILD  assimp.cpp  assimp.h  cuda.h  duckdb.cpp  duckdb.h  eigen.h  imgui.h  vpx.cpp  vpx.h
